ingresscontrollers/haproxy/acme-blog-ingress-2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: acme-blog
spec:
  rules:
  - host: blog.acme.com
    http:
      paths:
      - path: /
        backend:
          serviceName: acme-blog
          servicePort: 80
