ingresscontrollers/haproxy/acme-blog-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: acme-blog
spec:
  rules:
  - host: wwww.example.org
    http:
      paths:
      - path: /blog
        backend:
          serviceName: acme-blog
          servicePort: 80
